--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,22 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+
+    //firebase
+    implementation(platform("com.google.firebase:firebase-bom:33.1.1"))
     implementation libs.firebase.database
     implementation libs.firebase.auth
     implementation libs.firebase.firestore
+
+
+    //testing lib
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    //scaling device pixel
     implementation 'com.intuit.sdp:sdp-android:1.1.1'
+
+    //country code picker dependency
     implementation 'com.hbb20:ccp:2.5.0'
 }
