--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,12 @@ dependencies {
 
     //firebase
     implementation(platform("com.google.firebase:firebase-bom:33.1.1"))
+    implementation("com.google.firebase:firebase-auth")
     implementation libs.firebase.database
     implementation libs.firebase.auth
     implementation libs.firebase.firestore
+
+    implementation 'com.google.android.play:integrity:1.3.0'
 
 
     //testing lib
