Search Users -now able to search users

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
 
     //country code picker dependency
     implementation 'com.hbb20:ccp:2.5.0'
+
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.2'
 }
