--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation libs.firebase.firestore
 
     implementation 'com.google.android.play:integrity:1.3.0'
+    implementation libs.firebase.storage
 
 
     //testing lib
@@ -58,4 +59,8 @@ dependencies {
     implementation 'com.hbb20:ccp:2.5.0'
 
     implementation 'com.firebaseui:firebase-ui-firestore:8.0.2'
+
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
 }
